Added a new set_fire function to extension.